<resources>
    <string name="app_name">易淘</string>
    <string name="title_login">登录</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="fast_register">快速注册</string>
    <string name="user_name">用户名</string>
    <string name="title_register">注册</string>
    <string name="pwd_again">确认密码</string>
    <string name="username_pwd_rule">用户名或密码</string>
    <string name="OK">确定</string>

    <string name="password_rules">密码以数字或字母开头，长度在6~18之间，只能包含字符、数字和下划线</string>
    <string name="username_rules">账号为中文，字母或数字，长度为4~20，一个中文算2个长度</string>
    <string name="password_different_again">两次输入的密码不同！</string>

    <string name="me_user_info">个人信息</string>
    <string name="me_user_goods">我的商品</string>
    <string name="me_goods_upload">上传商品</string>


</resources>
