<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">
    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        app:titleTextColor="@color/white"
        app:title="@string/title_login">
    </android.support.v7.widget.Toolbar>
    <EditText
        android:id="@+id/et_login_username"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/login_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="31dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/selector_ic_person"
        android:hint="@string/user_name"
        android:maxLength="20"/>
    <EditText
        android:id="@+id/et_login_pwd"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_login_username"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="23dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/selector_ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btn_login"
        style="@style/AppTheme.Button.EasyShop"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/et_login_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_login"
        android:layout_alignRight="@+id/btn_login"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="12dp"
        android:text="@string/fast_register"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />
</RelativeLayout>