<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">
    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        app:title="@string/title_register"
        app:titleTextColor="@color/white"/>
    <EditText
        android:id="@+id/et_register_username"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/register_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="31dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/selector_ic_person"
        android:hint="@string/user_name"
        android:maxLength="20"/>
    <EditText
        android:id="@+id/et_register_pwd"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:layout_below="@+id/et_register_username"
        android:layout_alignEnd="@+id/et_register_username"
        android:layout_alignLeft="@+id/et_register_username"
        android:layout_alignRight="@+id/et_register_username"
        android:layout_alignStart="@+id/et_register_username"
        android:layout_marginTop="6dp"
        android:drawableLeft="@drawable/selector_ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <EditText
        android:id="@+id/et_register_pwdAgain"
        style="@style/AppTheme.EditText.Big"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignEnd="@+id/et_register_pwd"
        android:layout_alignLeft="@+id/et_register_pwd"
        android:layout_alignRight="@+id/et_register_pwd"
        android:layout_alignStart="@+id/et_register_pwd"
        android:layout_below="@+id/et_register_pwd"
        android:layout_marginTop="6dp"
        android:background="@color/white"
        android:drawableLeft="@drawable/selector_ic_lock"
        android:hint="@string/pwd_again"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/btn_register"
        style="@style/AppTheme.Button.EasyShop"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignEnd="@+id/et_register_pwdAgain"
        android:layout_alignLeft="@+id/et_register_pwdAgain"
        android:layout_alignRight="@+id/et_register_pwdAgain"
        android:layout_alignStart="@+id/et_register_pwdAgain"
        android:layout_below="@+id/et_register_pwdAgain"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:text="@string/title_register" />
</RelativeLayout>